--- a/Wpf/Dialog/UpdateComputer.xaml
+++ b/Wpf/Dialog/UpdateComputer.xaml
@@ -5,36 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf.Dialog"
         Loaded="Window_Loaded"
-        mc:Ignorable="d"
-                    WindowStartupLocation="CenterScreen"
-    Title="Create User" Height="400" Width="400">
+        WindowStyle="None"
+        Background="Transparent"
+        AllowsTransparency="True"
+        WindowStartupLocation="CenterScreen"
+        Height="400" Width="400">
 
-    <Grid Margin="0,0,0,83">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="94*" />
-        </Grid.RowDefinitions>
-        <StackPanel Margin="10,10,10,0">
-            <Label Content="Computer Name"/>
-            <TextBox x:Name="computerName" Text="{Binding CurrentComputer.ComputerName, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
-            <Label Content="{Binding ElementName=computerName, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+    <Border Background="#FF2B2A2A" CornerRadius="10">
+        <Grid Margin="0,0,0,83">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="94*" />
+            </Grid.RowDefinitions>
+            <StackPanel Margin="10,10,10,0">
+                <TextBlock HorizontalAlignment="Center" FontSize="20" TextDecorations="Underline" FontWeight="Bold" Foreground="White" Margin="0 0 0 10">
+                    UPDATE COMPUTER
+                </TextBlock>
+                <Label Content="Computer Name" Foreground="White"/>
+                <TextBox x:Name="computerName" Foreground="White" BorderBrush="White" Text="{Binding CurrentComputer.ComputerName, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
+                <Label Content="{Binding ElementName=computerName, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
 
-            <Label Content="Computer Spec"/>
-            <TextBox x:Name="computerSpec" Text="{Binding CurrentComputer.ComputerSpec, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
-            <Label Content="{Binding ElementName=computerSpec, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+                <Label Content="Computer Spec" Foreground="White"/>
+                <TextBox x:Name="computerSpec" Foreground="White" BorderBrush="White" Text="{Binding CurrentComputer.ComputerSpec, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
+                <Label Content="{Binding ElementName=computerSpec, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
 
-            <Label Content="Status" Margin="0 15 0 0"/>
-            <ComboBox x:Name="cbStatus" SelectedValue="{Binding CurrentComputer.ComputerStatus, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" 
-                      SelectedValuePath="Tag">
-                <ComboBoxItem Content="Online" Tag="False"/>
-                <ComboBoxItem Content="Offline" Tag="True"/>
-            </ComboBox>
-            <Label Content="{Binding ElementName=cbRoles, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+                <Label Content="Status" Margin="0 15 0 0" Foreground="White"/>
+                <ComboBox x:Name="cbStatus" Background="Transparent" Foreground="White" 
+                          SelectedValue="{Binding CurrentComputer.ComputerStatus, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" 
+                          SelectedValuePath="Tag"
+                          Style="{StaticResource theComboBox}"
+                          ItemContainerStyle="{DynamicResource theComboBoxItem}">
+                    <ComboBoxItem Content="Online" Tag="False" Foreground="Black"/>
+                    <ComboBoxItem Content="Offline" Tag="True" Foreground="Black"/>
+                </ComboBox>
+                <Label Content="{Binding ElementName=cbRoles, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
 
-        </StackPanel>
+            </StackPanel>
 
-        <StackPanel Orientation="Horizontal" Margin="114,218,114,-71">
-            <Button Content="Create" Command="{Binding SubmitCommand}" Focusable="True" Margin="5"/>
-            <Button Content="Cancel" x:Name="btnCancel" Click="btnCancel_Click" Margin="5"/>
-        </StackPanel>
-    </Grid>
+            <StackPanel Orientation="Horizontal" Margin="110,218,110,-71">
+                <Button Content="Create" Command="{Binding SubmitCommand}" Focusable="True" Margin="5" Style="{StaticResource ModernButtonStyle}"
+                        Height="40" Width="80"/>
+                <Button Content="Cancel" x:Name="btnCancel" Click="btnCancel_Click" Margin="5" Style="{StaticResource ModernButtonStyle}"
+                        Height="40" Width="80"/>
+            </StackPanel>
+        </Grid>
+    </Border>
 </Window>
