--- a/Wpf/Register.xaml
+++ b/Wpf/Register.xaml
@@ -38,13 +38,12 @@
             <StackPanel Orientation="Horizontal">
                 <TextBox FontFamily="helvetica"
                          FontWeight="Light"
-                         FontSize="20"
-                         HorizontalAlignment="Center"
+                         FontSize="15"
                          Foreground="White"
                          Background="Transparent"
                          CaretBrush="White"
                          BorderThickness="0"
-                         Width="235"
+                         Width="377"
                          x:Name="txtUsername"
                          TextChanged="txtUsername_TextChanged"
                          HorizontalContentAlignment="Left"
@@ -56,14 +55,15 @@
                                             HorizontalAlignment="Center"
                                             Foreground="White"/>
             </StackPanel>
-            <Border Width="250"
+            <Border Width="395"
+                    Margin="0 2 0 0"
                     Height="2"
                     Background="White"
                     x:Name="bdUsername"
                     Opacity="0.8"/>
 
             <TextBox x:Name="hiddenUsername" Text="{Binding CurrentUser.UserName, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Visibility="Collapsed"/>
-            <Label Content="{Binding ElementName=hiddenUsername, Path=(Validation.Errors)[0].ErrorContent}" Background="Transparent" Foreground="Red" Height="25" Width="250" />
+            <Label Content="{Binding ElementName=hiddenUsername, Path=(Validation.Errors)[0].ErrorContent}" Background="Transparent" Foreground="Red" Height="25" Width="395" />
 
             <Grid>
                 <TextBlock Text="Email"
@@ -77,7 +77,7 @@
             <StackPanel Orientation="Horizontal">
                 <TextBox FontFamily="helvetica"
                          FontWeight="Light"
-                         FontSize="20"
+                         FontSize="15"
                          HorizontalAlignment="Center"
                          Foreground="White"
                          Background="Transparent"
@@ -85,7 +85,7 @@
                          BorderThickness="0"
                          x:Name="txtEmail"
                          TextChanged="txtEmail_TextChanged"
-                         Width="235"
+                         Width="377"
                          HorizontalContentAlignment="Left"
                          Opacity="0.8"
                          Height="25"
@@ -95,14 +95,15 @@
                                             HorizontalAlignment="Center"
                                             Foreground="White"/>
             </StackPanel>
-            <Border Width="250"
+            <Border Width="395"
                     Height="2"
                     x:Name="bdEmail"
+                    Margin="0 2 0 0"
                     Background="White"
                     Opacity="0.8"/>
 
             <TextBox x:Name="hiddenEmail" Text="{Binding CurrentUser.UserEmail, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Visibility="Collapsed"/>
-            <Label Content="{Binding ElementName=hiddenEmail, Path=(Validation.Errors)[0].ErrorContent}" Background="Transparent" Foreground="Red" Height="25" Width="250" />
+            <Label Content="{Binding ElementName=hiddenEmail, Path=(Validation.Errors)[0].ErrorContent}" Background="Transparent" Foreground="Red" Height="25" Width="395" />
 
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -118,45 +119,70 @@
                            Margin="63, 15, 0, 0"/>
             </Grid>
 
-            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                <PasswordBox FontFamily="helvetica"
+            <StackPanel Orientation="Horizontal">
+                <Grid Margin="63, 0, 0, 0">
+                    <TextBox x:Name="showPasswordBox" 
+                             FontFamily="helvetica"
                              FontWeight="Light"
-                             FontSize="20"
+                             FontSize="15"
                              HorizontalAlignment="Center"
                              Foreground="White"
                              Background="Transparent"
                              CaretBrush="White"
                              BorderThickness="0"
-                             Width="235"
+                             Width="377"
+                             Height="25"
+                             HorizontalContentAlignment="Left"
+                             Opacity="0.8"
+                             Visibility="Collapsed"
+                             TextChanged="showPasswordBox_TextChanged"/>    
+                <PasswordBox FontFamily="helvetica"
+                             FontWeight="Light"
+                             FontSize="15"
+                             HorizontalAlignment="Center"
+                             Foreground="White"
+                             Background="Transparent"
+                             CaretBrush="White"
+                             BorderThickness="0"
+                             Width="377"
                              x:Name="password"
                              PasswordChanged="password_PasswordChanged"
                              HorizontalContentAlignment="Left"
                              Opacity="0.8"
-                             Height="25"
-                             Margin="63, 0, 0, 0"/>
+                             Height="25"/>
+                </Grid>
                 <iconPacks:PackIconMaterial Kind="Lock" 
                                             VerticalAlignment="Center" 
                                             HorizontalAlignment="Center"
                                             Foreground="White"/>
                 <Grid>
-                    <iconPacks:PackIconMaterial Kind="Eye" 
-                                Margin="15 0 0 0"
-                                VerticalAlignment="Center" 
-                                HorizontalAlignment="Center"
-                                Foreground="White" Visibility="Collapsed"/>
-                    <iconPacks:PackIconMaterial Kind="EyeClosed" 
-                                VerticalAlignment="Center"
-                                Foreground="White" Margin="15,0,0,0"/>
+                    <Button Background="Transparent"
+                            Visibility="Collapsed"
+                            BorderThickness="0"
+                            x:Name="btnShow" Click="btnShow_Click">
+                        <iconPacks:PackIconMaterial Kind="Eye" 
+                                                    VerticalAlignment="Center" 
+                                                    HorizontalAlignment="Center"
+                                                    Foreground="White"/>
+                    </Button>
+                    <Button Background="Transparent"
+                            BorderThickness="0"
+                            x:Name="btnHide" Click="btnHide_Click">
+                        <iconPacks:PackIconMaterial Kind="EyeClosed" 
+                                                    VerticalAlignment="Center"
+                                                    Foreground="White"/>
+                    </Button>
                 </Grid>
             </StackPanel>
-            <Border Width="250"
+            <Border Width="395"
                     Height="2"
+                    Margin="0 2 0 0"
                     x:Name="bdPassword"
                     Background="White"
                     Opacity="0.8"/>
 
             <TextBox x:Name="hiddenPasswordBox" Text="{Binding CurrentUser.UserPassword, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Visibility="Collapsed"/>
-            <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=hiddenPasswordBox}" Background="Transparent" Foreground="Red" Height="25" Width="250"/>
+            <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=hiddenPasswordBox}" Background="Transparent" Foreground="Red" Height="25" Width="395"/>
 
             <Grid>
                 <TextBlock Text="Confirm Password"
@@ -168,47 +194,72 @@
                            Margin="63, 15, 0, 0"/>
             </Grid>
 
-            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                <PasswordBox FontFamily="helvetica"
+            <StackPanel Orientation="Horizontal">
+                <Grid Margin="63 0 0 0">
+                    <TextBox x:Name="showConfirmPasswordBox" 
+                             FontFamily="helvetica"
                              FontWeight="Light"
-                             FontSize="20"
+                             FontSize="15"
                              HorizontalAlignment="Center"
                              Foreground="White"
                              Background="Transparent"
                              CaretBrush="White"
                              BorderThickness="0"
-                             Width="235"
+                             Width="377"
+                             Height="25"
+                             HorizontalContentAlignment="Left"
+                             Opacity="0.8"
+                             Visibility="Collapsed"
+                             TextChanged="showConfirmPasswordBox_TextChanged"/>
+                <PasswordBox FontFamily="helvetica"
+                             FontWeight="Light"
+                             FontSize="15"
+                             HorizontalAlignment="Center"
+                             Foreground="White"
+                             Background="Transparent"
+                             CaretBrush="White"
+                             BorderThickness="0"
+                             Width="377"
                              x:Name="confirmPassword"
                              PasswordChanged="confirmPassword_PasswordChanged"
                              HorizontalContentAlignment="Left"
                              Opacity="0.8"
-                             Height="25"
-                             Margin="63, 0, 0, 0"/>
+                             Height="25"/>
+                </Grid>
                 <iconPacks:PackIconMaterial Kind="LockCheck" 
-                                VerticalAlignment="Center" 
-                                HorizontalAlignment="Center"
-                                Foreground="White"/>
+                                            VerticalAlignment="Center" 
+                                            HorizontalAlignment="Center"
+                                            Foreground="White"/>
                 <Grid>
-                    <iconPacks:PackIconMaterial Kind="Eye" 
-                                Margin="15 0 0 0"
-                                VerticalAlignment="Center" 
-                                HorizontalAlignment="Center"
-                                Foreground="White" Visibility="Collapsed"/>
-                    <iconPacks:PackIconMaterial Kind="EyeClosed" 
-                                VerticalAlignment="Center"
-                                Foreground="White" Margin="15,0,0,0"/>
+                    <Button Background="Transparent"
+                            Visibility="Collapsed"
+                            BorderThickness="0"
+                            x:Name="btnCPShow" Click="btnCPShow_Click">
+                        <iconPacks:PackIconMaterial Kind="Eye" 
+                                                    VerticalAlignment="Center" 
+                                                    HorizontalAlignment="Center"
+                                                    Foreground="White"/>
+                    </Button>
+                    <Button Background="Transparent"
+                            BorderThickness="0"
+                            x:Name="btnCPHide" Click="btnCPHide_Click">
+                        <iconPacks:PackIconMaterial Kind="EyeClosed" 
+                                                    VerticalAlignment="Center"
+                                                    Foreground="White"/>
+                    </Button>
                 </Grid>
             </StackPanel>
-            <Border Width="250"
+            <Border Width="395"
                     Height="2"
+                    Margin="0 2 0 0"
                     Background="White"
                     x:Name="bdConfirmPassword"
                     Opacity="0.8"/>
             <TextBox x:Name="hiddenConfirmPasswordBox" Text="{Binding ConfirmUser.UserPassword, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Visibility="Collapsed"/>
-            <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=hiddenConfirmPasswordBox}" Background="Transparent" Foreground="Red" Height="25" Width="250"/>
+            <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=hiddenConfirmPasswordBox}" Background="Transparent" Foreground="Red" Height="25" Width="395"/>
 
-            <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
-                <Button x:Name="btnRegister" Command="{Binding SumitCommand}" Click="btnRegister_Click" Width="100" Height="40" Content="REGISTER" Margin="60,0,60,0" Style="{StaticResource ModernButtonStyle}"/>
+            <StackPanel Orientation="Horizontal" Margin="0,50,40,0" HorizontalAlignment="Center">
+                <Button x:Name="btnRegister" Command="{Binding SubmitCommand}" Click="btnRegister_Click" Width="100" Height="40" Content="REGISTER" Margin="60,0,60,0" Style="{StaticResource ModernButtonStyle}"/>
                 <Button x:Name="btnCancel" Click="btnCancel_Click" Width="100" Height="40" Content="CANCEL" Style="{StaticResource ModernButtonStyle}"/>
             </StackPanel>
 
