--- a/Wpf/Dialog/EditProfile.xaml
+++ b/Wpf/Dialog/EditProfile.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:local="clr-namespace:Wpf.Dialog"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
@@ -19,42 +20,111 @@
                 <RowDefinition Height="94*" />
             </Grid.RowDefinitions>
             
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,81">
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,36">
                 <Grid Height="222">
                     <Ellipse Width="100" Height="100" Margin="15 30 0 70">
-                        <Ellipse.Style>
-                            <Style TargetType="Ellipse">
-                                <Setter Property="Opacity" Value="0.8"/>
-                                
-                            </Style>
-                        </Ellipse.Style>
-
                         <Ellipse.Fill>
-                            <ImageBrush RenderOptions.BitmapScalingMode="HighQuality" ImageSource="/Images/default.png"/>
+                            <ImageBrush x:Name="userAvatar" RenderOptions.BitmapScalingMode="HighQuality" ImageSource="{Binding CurrentUser.UserAvatar}" Opacity="0.8"/>
                         </Ellipse.Fill>
                     </Ellipse>
-                    <materialDesign:PackIcon Kind="Edit" Margin="58,67,0,0" Name="icon" Visibility="Collapsed"/>
+                    <Button Background="Transparent" BorderThickness="0"  Margin="20 0 5 40" x:Name="btnImage" Click="btnImage_Click">
+                        <materialDesign:PackIcon Kind="Edit" Name="icon" Foreground="Black"/>
+                    </Button>
                 </Grid>
 
-                <StackPanel Margin="40,10,10,0" DockPanel.Dock="Right" Width="247">
+                <StackPanel Margin="20,10,10,0" DockPanel.Dock="Right">
                     <TextBlock HorizontalAlignment="Left" FontSize="20" TextDecorations="Underline" FontWeight="Bold" Foreground="White" Margin="0 0 0 10">
                          EDIT PROFILE
                     </TextBlock>
-                    <Label Content="Email" Foreground="White"/>
-                    <TextBox x:Name="email" Foreground="White" BorderBrush="White" Text="{Binding CurrentUser.UserEmail, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
-                    <Label Content="{Binding ElementName=email, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+                    <Label Content="Email" Foreground="White" Opacity="0.5"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox x:Name="email" 
+                                 Foreground="White"  
+                                 Width="200"
+                                 BorderThickness="0"
+                                 TextChanged="email_TextChanged"/>
+                        <iconPacks:PackIconMaterial Kind="Email" 
+                                                    VerticalAlignment="Center" 
+                                                    HorizontalAlignment="Center"
+                                                    Foreground="White"/>
+                        
+                    </StackPanel>
+                    <Border Width="220"
+                             Height="2"
+                             Background="White"
+                             x:Name="bdEmail"
+                             Margin="0 2 0 0"
+                             Opacity="0.5"/>
+                    <TextBox x:Name="hiddenEmail" Text="{Binding CurrentUser.UserEmail, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Visibility="Collapsed"/>
+                    <Label Content="{Binding ElementName=hiddenEmail, Path=(Validation.Errors)[0].ErrorContent}" Background="Transparent" Foreground="Red" Height="25" Width="220" />
 
-                    <Label Content="Username" Foreground="White"/>
-                    <TextBox x:Name="username" Foreground="White" BorderBrush="White" Text="{Binding CurrentUser.UserName, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
-                    <Label Content="{Binding ElementName=username, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+                    <Label Content="Username" Foreground="White" Opacity="0.5"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox x:Name="txtUsername" 
+                                 Foreground="White"  
+                                 Width="200"
+                                 BorderThickness="0"
+                                 TextChanged="txtUsername_TextChanged"/>
+                        <iconPacks:PackIconMaterial Kind="Account" 
+                                                    VerticalAlignment="Center" 
+                                                    HorizontalAlignment="Center"
+                                                    Foreground="White"/>
 
-                    <Label Content="Password" Foreground="White"/>
-                    <PasswordBox x:Name="passwordBox" Foreground="White" BorderBrush="White" PasswordChanged="passwordBox_PasswordChanged"/>
-                    <TextBox x:Name="hiddenPasswordBox" Foreground="White" BorderBrush="White" Text="{Binding CurrentUser.UserPassword, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Visibility="Collapsed"/>
-                    <Label Content="{Binding ElementName=hiddenPasswordBox, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red"/>
+                    </StackPanel>
+                    <Border Width="220"
+                             Height="2"
+                             Background="White"
+                             x:Name="bdUsername"
+                             Margin="0 2 0 0"
+                             Opacity="0.5"/>
+                    <TextBox x:Name="hiddenUsername" Text="{Binding CurrentUser.UserName, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Visibility="Collapsed"/>
+                    <Label Content="{Binding ElementName=hiddenUsername, Path=(Validation.Errors)[0].ErrorContent}" Background="Transparent" Foreground="Red" Height="25" Width="220"/>
+
+                    <Label Content="Password" Foreground="White" Opacity="0.5"/>
+                    <StackPanel Orientation="Horizontal" Width="220">
+                        <Grid>
+                            <PasswordBox Foreground="White"  
+                                        Width="185"
+                                         x:Name="passwordBox"
+                                         PasswordChanged="passwordBox_PasswordChanged_1"
+                                        BorderThickness="0"/>
+                            <TextBox x:Name="showPasswordBox" 
+                                    Foreground="White"  
+                                    Width="185"
+                                    TextChanged="showPasswordBox_TextChanged"
+                                    Visibility="Collapsed"
+                                    BorderThickness="0"/>
+                        </Grid>
+                        <Grid Margin="0 0 0 0">
+                            <Button Background="Transparent"
+                                    Visibility="Collapsed"
+                                    BorderThickness="0"
+                                    x:Name="btnShow" Click="btnShow_Click">
+                                <iconPacks:PackIconMaterial Kind="Eye" 
+                                                            VerticalAlignment="Center" 
+                                                            HorizontalAlignment="Center"
+                                                            Foreground="White"/>
+                            </Button>
+                            <Button Background="Transparent"
+                                    BorderThickness="0"
+                                    x:Name="btnHide" Click="btnHide_Click">
+                                <iconPacks:PackIconMaterial Kind="EyeClosed" 
+                                                            VerticalAlignment="Center"
+                                                            Foreground="White"/>
+                            </Button>
+                        </Grid>
+                    </StackPanel>
+                    <Border Width="220"
+                     Height="2"
+                     Margin="0 2 0 0"
+                     Background="White"
+                     x:Name="bdPassword"
+                     Opacity="0.5"/>
+                    <TextBox x:Name="hiddenPasswordBox" Text="{Binding CurrentUser.UserPassword, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Visibility="Collapsed"/>
+                    <Label Content="{Binding ElementName=hiddenPasswordBox, Path=(Validation.Errors)[0].ErrorContent}" Background="Transparent" Foreground="Red" Height="25" Width="220"/>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="110,250,110,3">
+            <StackPanel Orientation="Horizontal" Margin="110,317,110,-64">
                 <Button Content="Update" Command="{Binding SubmitCommand}" Focusable="True" Margin="5" Style="{StaticResource ModernButtonStyle}"
                     Height="40" Width="80"/>
                 <Button Content="Cancel" x:Name="btnCancel" Click="btnCancel_Click" Margin="5" Style="{StaticResource ModernButtonStyle}"
