--- a/Wpf/MVVM/View/M_UsersView.xaml
+++ b/Wpf/MVVM/View/M_UsersView.xaml
@@ -3,10 +3,52 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:Wpf.MVVM.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="Cyan">
+             d:DesignHeight="700" d:DesignWidth="800">
     <Grid>
-            
+        <StackPanel Margin="30 12 0 0">
+            <StackPanel.Resources>
+                <local:RoleConverter x:Key="roleConverter"/>
+                <local:ComputerConverter x:Key="computerConverter"/>
+            </StackPanel.Resources>
+
+            <DockPanel Margin="0 12 5 0">
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"
+                   FontSize="15" FontWeight="Bold" Foreground="White" Text="All Gamers"/>
+                <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},   
+                   StringFormat='{}{0:dddd, MMMM dd, yyyy}'}" Foreground="LightGray" FontSize="12"
+                   FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Right"
+                   DockPanel.Dock="Right" Margin="0 0 20 0"/>
+            </DockPanel>
+
+            <Separator Height="1" Background="LightGray" Margin="0 10 30 10"/>
+            <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" 
+              ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+              ItemsSource="{Binding Users}" 
+              RowStyle="{DynamicResource DataGridRowStyle1}" Margin="0 20 30 0" x:Name="userDataGrid">
+
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" IsReadOnly="True" Width="*" Binding="{Binding UserId}"/>
+
+                    <DataGridTextColumn Header="Username" IsReadOnly="True" Width="*" Binding="{Binding UserName}"/>
+
+                    <DataGridTextColumn Header="Email" IsReadOnly="True" Width="*" Binding="{Binding UserEmail}"/>
+
+                    <DataGridTextColumn Header="Password" IsReadOnly="True" Width="*" Binding="{Binding UserPassword}" Visibility="Collapsed"/>
+
+
+                    <DataGridTemplateColumn Header="Computer" IsReadOnly="True" Width="*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding CurrentComputers, Converter={StaticResource computerConverter}}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
     </Grid>
 </UserControl>
