--- a/Wpf/MVVM/View/A_UsersView.xaml
+++ b/Wpf/MVVM/View/A_UsersView.xaml
@@ -14,6 +14,7 @@
             <StackPanel.Resources>
                 <local:RoleConverter x:Key="roleConverter"/>
                 <local:ComputerConverter x:Key="computerConverter"/>
+                <local:ImageConverter x:Key="avatarConverter"/>
             </StackPanel.Resources>
 
                 <DockPanel Margin="0 12 5 0">
@@ -117,9 +118,22 @@
                       RowStyle="{DynamicResource DataGridRowStyle1}" Margin="0 20 30 0" x:Name="userDataGrid">
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="ID" IsReadOnly="True" Width="auto" Binding="{Binding UserId}"/>
+                    <DataGridTextColumn x:Name="userID" Header="ID" IsReadOnly="True" Width="auto" Binding="{Binding UserId}"/>
 
-                    <DataGridTextColumn Header="Username" IsReadOnly="True" Width="auto" Binding="{Binding UserName}"/>
+                    <DataGridTemplateColumn Header="User" IsReadOnly="True" Width="auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Ellipse Width="30" Height="30" Margin="0 0 10 0">
+                                        <Ellipse.Fill>
+                                            <ImageBrush x:Name="userAvatar" RenderOptions.BitmapScalingMode="HighQuality" ImageSource="{Binding UserAvatar, Converter={StaticResource avatarConverter}}"/>
+                                        </Ellipse.Fill>
+                                    </Ellipse>
+                                    <TextBlock Text="{Binding UserName}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
 
                     <DataGridTextColumn Header="Email" IsReadOnly="True" Width="auto" Binding="{Binding UserEmail}"/>
 
